force-app/main/default/objects/Solitair_Result__c/Solitair_Result__c.object-meta.xml
<CustomObject>
    <label>Solitair Result</label>
    <nameField>
        <label>Solitair Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solitair Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>