force-app/main/default/objects/Solitair_Result__c/fields/board_id__c.field-meta.xml
<CustomField>
    <fullName>board_id__c</fullName>
    <label>Board Id</label>
    <referenceTo>Solitair_Metadata__c</referenceTo>
    <relationshipLabel>Solitair Results</relationshipLabel>
    <relationshipName>Solitair_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>