force-app/main/default/objects/Solitair_Result__c/fields/last_move__c.field-meta.xml
<CustomField>
    <fullName>last_move__c</fullName>
    <label>Last move</label>
    <length>50</length>
    <type>Text</type>
</CustomField>