force-app/main/default/objects/Solitair_Result__c/fields/Min_Path__c.field-meta.xml
<CustomField>
    <fullName>Min_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Path</label>
    <type>Checkbox</type>
</CustomField>