force-app/main/default/objects/Solitair_Result__c/fields/parent_board_id__c.field-meta.xml
<CustomField>
    <fullName>parent_board_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Board Id</label>
    <referenceTo>Solitair_Metadata__c</referenceTo>
    <relationshipLabel>Solitair Results (Parent Board Id)</relationshipLabel>
    <relationshipName>Solitair_Results_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>