force-app/main/default/objects/Solitair_Result__c/fields/Result_Sorting__c.field-meta.xml
<CustomField>
    <fullName>Result_Sorting__c</fullName>
    <formula>VALUE(SUBSTITUTE( left( last_move__c, 2), &apos;.&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Sorting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>